# Basic-OpenGL-with-GLFW-Index-Buffers

./: CMakeLists.txt  README!.txt  README.md  igme_config.yml
BasicOpenGLIndexBuffer/: BasicOpenGLIndexBuffer.vcxproj  main.cpp
source/: main.cpp
src/: main.cpp
